Fix pdf viewer width and alignment

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 
 * {
-  width: 100%;
+  width: 99.6%;
   height: 100%;
+  background-color: #e0e0e0;
+  text-align: center;
 }
